k8s/frontend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: stackly-ecommerce
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: stackly-ecommerce.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
